Combines hyperparamer optimization into single function

--- a/capstone_lending_club/2_modeling_temporary.ipynb
+++ b/capstone_lending_club/2_modeling_temporary.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Estimate-or-load-models-and-make-predictions\" data-toc-modified-id=\"Estimate-or-load-models-and-make-predictions-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Estimate or load models and make predictions</a></span></li><li><span><a href=\"#Stacking\" data-toc-modified-id=\"Stacking-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Stacking</a></span><ul class=\"toc-item\"><li><span><a href=\"#Logistic-regression\" data-toc-modified-id=\"Logistic-regression-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Logistic regression</a></span><ul class=\"toc-item\"><li><span><a href=\"#Including-features\" data-toc-modified-id=\"Including-features-2.1.1\"><span class=\"toc-item-num\">2.1.1&nbsp;&nbsp;</span>Including features</a></span></li><li><span><a href=\"#Only-individual-predictions,-not-features\" data-toc-modified-id=\"Only-individual-predictions,-not-features-2.1.2\"><span class=\"toc-item-num\">2.1.2&nbsp;&nbsp;</span>Only individual predictions, not features</a></span></li></ul></li><li><span><a href=\"#Random-forests\" data-toc-modified-id=\"Random-forests-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Random forests</a></span></li></ul></li><li><span><a href=\"#Voting-classifier\" data-toc-modified-id=\"Voting-classifier-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Voting classifier</a></span></li><li><span><a href=\"#Adjust-the-decision-threshold\" data-toc-modified-id=\"Adjust-the-decision-threshold-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Adjust the decision threshold</a></span><ul class=\"toc-item\"><li><span><a href=\"#Linear-regression\" data-toc-modified-id=\"Linear-regression-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Linear regression</a></span></li><li><span><a href=\"#SVM\" data-toc-modified-id=\"SVM-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>SVM</a></span></li><li><span><a href=\"#Other\" data-toc-modified-id=\"Other-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Other</a></span></li></ul></li><li><span><a href=\"#XGBoost\" data-toc-modified-id=\"XGBoost-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>XGBoost</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Estimate-or-load-models-and-make-predictions\" data-toc-modified-id=\"Estimate-or-load-models-and-make-predictions-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Estimate or load models and make predictions</a></span></li><li><span><a href=\"#Voting-classifier\" data-toc-modified-id=\"Voting-classifier-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Voting classifier</a></span></li><li><span><a href=\"#Adjust-the-decision-threshold\" data-toc-modified-id=\"Adjust-the-decision-threshold-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Adjust the decision threshold</a></span><ul class=\"toc-item\"><li><span><a href=\"#Linear-regression\" data-toc-modified-id=\"Linear-regression-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Linear regression</a></span></li><li><span><a href=\"#SVM\" data-toc-modified-id=\"SVM-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>SVM</a></span></li><li><span><a href=\"#Other\" data-toc-modified-id=\"Other-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Other</a></span></li></ul></li><li><span><a href=\"#XGBoost\" data-toc-modified-id=\"XGBoost-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>XGBoost</a></span></li><li><span><a href=\"#HpSklearn\" data-toc-modified-id=\"HpSklearn-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>HpSklearn</a></span></li><li><span><a href=\"#Hyperopt\" data-toc-modified-id=\"Hyperopt-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Hyperopt</a></span></li></ul></div>"
    ]
   },
   {
@@ -563,6 +563,116 @@
    "source": [
     "xgb_cv"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### HpSklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hpsklearn import HyperoptEstimator, svc\n",
+    "import hyperopt \n",
+    "\n",
+    "# svc_class_weight = 'balanced'\n",
+    "svc_C = 10\n",
+    "svm_rbf_1 = svc(name='svm_rbf_1', kernels=['rbf'], C=svc_C)\n",
+    "#                 class_weight=svc_class_weight) #'balanced',\n",
+    "#                 probability=False, cache_size=5000,\n",
+    "#                 random_state=1)\n",
+    "svm_rbf_hp_1 = HyperoptEstimator(classifier=svm_rbf_1,\n",
+    "                                 algo=hyperopt.tpe.suggest,\n",
+    "                                 max_evals=5)\n",
+    "\n",
+    "svm_rbf_hp_1.fit(X_train_small, y_train_small)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Hyperopt "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hyperopt import fmin, tpe, hp, STATUS_OK, Trials, space_eval\n",
+    "from sklearn.model_selection import cross_val_score, StratifiedKFold\n",
+    "\n",
+    "# Define hyperparameter search space\n",
+    "space = {\n",
+    "    'kernel': 'rbf',\n",
+    "    'cache_size': 10000,\n",
+    "    'class_weight': 'balanced',\n",
+    "    'random_state': 1\n",
+    "    'C': hp.uniform('C', 1E-10, 1E10),\n",
+    "    'gamma': hp.uniform('gamma', 1E-5, 1E8),\n",
+    "}\n",
+    "\n",
+    "# Function to minimize\n",
+    "N_FOLDS=3\n",
+    "N_JOBS=-2\n",
+    "def objective(params, n_folds=N_FOLDS, n_jobs=N_JOBS):\n",
+    "    \"\"\"Objective function to minimize\"\"\"\n",
+    "    \n",
+    "    # Instantiate estimator\n",
+    "    clf = SVC(**params)\n",
+    "    \n",
+    "    # Cross-validation object\n",
+    "    cv = StratifiedKFold(n_folds, random_state=1)\n",
+    "    \n",
+    "    # Compute average precision through CV\n",
+    "    score = cross_val_score(clf, X_train_small, y_train_small, cv=cv,\n",
+    "                            scoring='average_precision', n_jobs=n_jobs)\n",
+    "    \n",
+    "    # Return results\n",
+    "    return {'loss': -score.mean(), 'params': params, 'status': STATUS_OK}\n",
+    "\n",
+    "# Trials object to track progress\n",
+    "trials = Trials()\n",
+    "\n",
+    "# Minimize objective\n",
+    "MAX_EVALS=50 \n",
+    "best = fmin(objective, space, algo=tpe.suggest,\n",
+    "            max_evals=MAX_EVALS, trials=trials)\n",
+    "\n",
+    "print ('Best parameters: {}'.format(best))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the values of the optimal parameters\n",
+    "best_params = space_eval(space, best)\n",
+    "\n",
+    "# Fit the model with the optimal hyperparamters\n",
+    "SVC.set_params(**best_params)\n",
+    "SVC.fit(X_train_small, y_train_small);\n",
+    "\n",
+    "# Score with the test data\n",
+    "y_score = SVC.predict_proba(X_test_small)\n",
+    "ap_score = average_precision_score(y_test_small, y_score[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
