--- a/capstone_lending_club/2b_modeling_aws.ipynb
+++ b/capstone_lending_club/2b_modeling_aws.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,8 +216,12 @@
     "\n",
     "# Define hyperparameter search space\n",
     "space = {\n",
+    "    'kernel': 'rbf',\n",
+    "    'cache_size': 10000,\n",
+    "    'class_weight': 'balanced',\n",
+    "    'random_state': 1\n",
     "    'C': hp.uniform('C', 1E-10, 1E10),\n",
-    "    'gamma': hp.uniform('gamma', 1E-5, 1E8) \n",
+    "    'gamma': hp.uniform('gamma', 1E-5, 1E8),\n",
     "}\n",
     "\n",
     "# Function to minimize\n",
@@ -227,8 +231,7 @@
     "    \"\"\"Objective function to minimize\"\"\"\n",
     "    \n",
     "    # Instantiate estimator\n",
-    "    clf = SVC(kernel='rbf', cache_size=6000, class_weight='balanced',\n",
-    "              random_state=1, **params)\n",
+    "    clf = SVC(**params)\n",
     "    \n",
     "    # Cross-validation object\n",
     "    cv = StratifiedKFold(n_folds, random_state=1)\n",
@@ -240,10 +243,11 @@
     "    # Return results\n",
     "    return {'loss': -score.mean(), 'params': params, 'status': STATUS_OK}\n",
     "\n",
+    "# Trials object to track progress\n",
     "trials = Trials()\n",
     "\n",
     "# Minimize objective\n",
-    "MAX_EVALS=4 \n",
+    "MAX_EVALS=50 \n",
     "best = fmin(objective, space, algo=tpe.suggest,\n",
     "            max_evals=MAX_EVALS, trials=trials)\n",
     "\n",
@@ -260,20 +264,99 @@
     "best_params = space_eval(space, best)\n",
     "\n",
     "# Fit the model with the optimal hyperparamters\n",
-    "clf.set_params(**best_params)\n",
-    "clf.fit(X_train_small, y_train_small);\n",
+    "SVC.set_params(**best_params)\n",
+    "SVC.fit(X_train_small, y_train_small);\n",
     "\n",
     "# Score with the test data\n",
-    "y_score = pipe.predict_proba(X_test_small)\n",
-    "ap_score = average_precision_scorerecision_score(y_test_small, y_score[:,1])"
+    "y_score = SVC.predict_proba(X_test_small)\n",
+    "ap_score = average_precision_score(y_test_small, y_score[:,1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'C': 1960392473.9097788, 'cache_size': 10000, 'class_weight': 'balanced', 'gamma': 66453320.8137085, 'kernel': 'rbf', 'random_state': 1} 0.2047\n"
+     ]
+    }
+   ],
+   "source": [
+    "from hyperopt import fmin, tpe, hp, STATUS_OK, Trials, space_eval\n",
+    "from sklearn.model_selection import cross_val_score, StratifiedKFold\n",
+    "\n",
+    "# Define hyperparameter search space\n",
+    "space = {\n",
+    "    'kernel': 'rbf',\n",
+    "    'cache_size': 10000,\n",
+    "    'class_weight': 'balanced',\n",
+    "    'random_state': 1,\n",
+    "    'C': hp.uniform('C', 1E-10, 1E10),\n",
+    "    'gamma': hp.uniform('gamma', 1E-5, 1E8),\n",
+    "}\n",
+    "\n",
+    "# Function to minimize\n",
+    "def find_best_hp(CLF, space, \n",
+    "                 X_train, y_train, X_test, y_test,\n",
+    "                 n_folds=5, n_jobs=-1, max_evals=20):\n",
+    "    \"\"\"Find best hyperparameters for a given classifier and search space.\"\"\"\n",
+    "    \n",
+    "    def objective(params, CLF=CLF, \n",
+    "                  n_folds=n_folds, n_jobs=n_jobs):\n",
+    "        \"\"\"Objective function to minimize\"\"\"\n",
+    "\n",
+    "        # Instantiate CLF\n",
+    "        clf = CLF(**params)\n",
+    "\n",
+    "        # Cross-validation object\n",
+    "        cv = StratifiedKFold(n_folds, random_state=1)\n",
+    "\n",
+    "        # Compute average precision through CV\n",
+    "        score = cross_val_score(clf, X_train, y_train, cv=cv,\n",
+    "                                scoring='average_precision', n_jobs=n_jobs)\n",
+    "\n",
+    "        # Return results\n",
+    "        return {'loss': -score.mean(), 'params': params, 'status': STATUS_OK}\n",
+    "\n",
+    "    # Trials object to track progress\n",
+    "    trials = Trials()\n",
+    "\n",
+    "    # Minimize objective\n",
+    "    best = fmin(objective, space, algo=tpe.suggest,\n",
+    "                max_evals=max_evals, trials=trials)\n",
+    "\n",
+    "    # Get the values of the optimal parameters\n",
+    "    best_params = space_eval(space, best)\n",
+    "\n",
+    "    # Fit the model with the optimal hyperparamters\n",
+    "    clf = CLF(**best_params)\n",
+    "#     clf.set_params(**best_params)\n",
+    "    clf.fit(X_train, y_train);\n",
+    "\n",
+    "    # Score classifier with the test data\n",
+    "    # Try if classifier supports probability\n",
+    "    try:\n",
+    "        y_score = clf.predict_proba(X_test)[:,1]\n",
+    "    # If it doesn't, use its decision function\n",
+    "    except AttributeError:\n",
+    "        y_score = clf.decision_function(X_test)\n",
+    "    # Calculate average precision\n",
+    "    ap_score = average_precision_score(y_test, y_score)\n",
+    "\n",
+    "    # Return best parameters and average precision\n",
+    "    return best_params, ap_score\n",
+    "\n",
+    "\n",
+    "best_p, ap = find_best_hp(SVC, space, \n",
+    "                          X_train=X_train_small, y_train=y_train_small,\n",
+    "                          X_test=X_test_small, y_test=y_test_small,\n",
+    "                          max_evals=2, n_jobs=3)\n",
+    "print(best_p, ap)"
+   ]
   },
   {
    "cell_type": "code",
@@ -582,7 +665,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "220.6px"
+    "width": "165px"
    },
    "toc_section_display": true,
    "toc_window_display": true
