--- a/capstone_lending_club/2b_aws_s3-setup.ipynb
+++ b/capstone_lending_club/2b_aws_s3-setup.ipynb
@@ -7,14 +7,38 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Store-data-in-S3-bucket\" data-toc-modified-id=\"Store-data-in-S3-bucket-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Store data in S3 bucket</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Create-S3-bucket\" data-toc-modified-id=\"Create-S3-bucket-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Create S3 bucket</a></span></li></ul></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Store data in S3 bucket"
+    "In this note book, we will create an S3 bucket on AWS and up load our preprocessed data set. We will then be able to simply download these data onto our EC2 instance, which we will use to run the more computationally expensive models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bptp3\n",
+    "import uuid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create S3 bucket"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will use Boto 3, the AWS SDK for Python, in order to interact with S3 from our notebooks."
    ]
   },
   {
@@ -23,10 +47,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import boto3\n",
     "# Set up boto3 to interact with S3\n",
-    "s3_client = boto3.client('s3')\n",
     "s3 = boto3.resource('s3')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since bucket names need to be globally unique, I will follow https://realpython.com/python-boto3-aws-s3/ to define a function that uses uuid library in order to append a universally unique identifier to the descriptive bucket name."
    ]
   },
   {
@@ -43,14 +72,19 @@
     }
    ],
    "source": [
-    "# https://realpython.com/python-boto3-aws-s3/#installation\n",
-    "import uuid\n",
     "def create_bucket_name(bucket_prefix):\n",
     "    \"\"\"Try to create globally unique bucket name.\"\"\"\n",
     "    return(''.join([bucket_prefix, str(uuid.uuid4())]))\n",
     "\n",
     "bucket_name = create_bucket_name('lending-club-')\n",
     "print(bucket_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we are ready to create the bucket."
    ]
   },
   {
@@ -101,10 +135,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Upload test file\n",
-    "s3.Bucket(bucket_name) \\\n",
-    "    .upload_file(Filename='data_processed/X_train.joblib',\n",
-    "                 Key='X_train_small.joblib')"
+    "# # Upload test file\n",
+    "# s3.Bucket(bucket_name) \\\n",
+    "#     .upload_file(Filename='data_processed/X_train.joblib',\n",
+    "#                  Key='X_train_small.joblib')"
    ]
   },
   {
@@ -116,9 +150,9 @@
     "# Upload preprocessed training and test sets to S3 bucket\n",
     "filenames = ['X_train', 'X_test', 'y_train', 'y_test', 'feature_names']\n",
     "for filename in filenames:\n",
-    "    s3.Bucket(bucket_name) \\\n",
-    "        .upload_file(Filename=f'data_processed/{filename}.joblib',\n",
-    "                     Key=f'{filename}.joblib')"
+    "    s3.Bucket(bucket_name).upload_file(\n",
+    "        Filename=f'data_processed/{filename}.joblib',\n",
+    "        Key=f'{filename}.joblib')"
    ]
   },
   {
@@ -127,9 +161,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download file\n",
-    "s3.Object(bucket_name, 'X_train_small.joblib') \\\n",
-    "    .download_file('X_train_small.joblib')"
+    "# # Download file\n",
+    "# s3.Object(bucket_name, 'X_train_small.joblib') \\\n",
+    "#     .download_file('X_train_small.joblib')"
    ]
   },
   {
