Adds hyperlink to data.

--- a/capstone_lending_club/1_cleaning.ipynb
+++ b/capstone_lending_club/1_cleaning.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "source": [
     "## Importing data\n",
-    "A subset of the data is publicly available on Lending Club's website, but in order to access all the data I had to create an account. This data set is very comprehensive, it spans about 10 years (from 2007 – shortly after the firm's founding – to the present) and contains roughly 1.8 million observations for 150 variables."
+    "A subset of the data is publicly available on [Lending Club's website](https://www.lendingclub.com/info/download-data.action), but in order to access all the data I had to create an account. This data set is very comprehensive, it spans about 10 years (from 2007 – shortly after the firm's founding – to the present) and contains roughly 1.8 million observations for 150 variables."
    ]
   },
   {
@@ -798,13 +798,6 @@
     "for v in variables_to_plot_3:\n",
     "    print(all_data.loc[all_data[v].notnull(),:].index[0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1843,7 +1836,7 @@
    "metadata": {},
    "source": [
     "### Feature engineering\n",
-    "Our domain expertise tells us that variables such as the loan amount don't primarily matter an absolute terms (the dollar amount), but relative to a borrower's income. Thus, let's look through the list of all the numeric variables to spot such variables. Then, we can normalize them by dividing through the applicant's annual income.\n",
+    "Domain expertise tells us that variables such as the loan amount don't primarily matter in absolute terms (the dollar amount), but relative to a borrower's income. Thus, let's look through the list of all the numeric variables to spot such variables. Then, we can normalize them by dividing through the applicant's annual income.\n",
     "\n",
     "Note that this normalization is different from any normalization/standardization performed as a preprocessing step for machine learning, which divides each column by a constant. Here, we divide each value in a column by a different value unique to that individual. The goal here is to create a more meaningful feature rather than to scale the variable."
    ]
@@ -1929,7 +1922,7 @@
     }
    ],
    "source": [
-    "# Sort names of number columns alphabetically (so\n",
+    "# Sort names of numeric columns alphabetically (so\n",
     "# that we can compare them more easily to data dictionary)\n",
     "sorted(all_data.select_dtypes(include=np.number).columns, \n",
     "       key=str.lower)"
@@ -1939,7 +1932,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we divide the income, let's see if there are any applicants with zero income."
+    "Before we divide by income, let's see if there are any applicants with zero income."
    ]
   },
   {
@@ -1996,7 +1989,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We know that we introduced 4 infinite values due to division by zero.  However, we are also concerned about extremely large but finite values introduced by dividing by a number close to zero. This concerns people who did have income, but whose income was low compared to typical full-time jobs.  In order to avoid positive outliers for the new variables, let's truncate these variables.\n",
+    "We know that we introduced 4 infinite values due to division by zero.  In addition, we also need to be concerned about extremely large but finite values introduced by dividing by a number close to zero. This will occur for applicants  who did have income, but whose income was low compared to typical full-time jobs.  In order to avoid positive outliers for the new variables, let's truncate these variables.\n",
     "\n",
     "In order to find an appropriate threshold for truncation, I will plot a histogram of the new variables with vertical lines for 95th, 97.5th, and 99th percentile. Note that we will omit data greater than the 99.9th percentile, in order to avoid compressing the x-axis excessively."
    ]
@@ -2160,7 +2153,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -4132,13 +4127,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 84,
    "metadata": {},
    "outputs": [],
@@ -4190,7 +4178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
