Fixed spelling mistake.

--- a/capstone_lending_club/2a_modeling.ipynb
+++ b/capstone_lending_club/2a_modeling.ipynb
@@ -12,18 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The line_profiler extension is already loaded. To reload it, use:\n",
-      "  %reload_ext line_profiler\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importing libraries\n",
     "import pdb \n",
@@ -134,11 +125,11 @@
     "\n",
     "However, I choose to leave modeling this dependency for further iterations of this project and treat the data as if they were an independent cross-section (and thus do *not* use any date variables as predictors).  The main reason is that taking the time-series factor into account would considerably increase complexity, which should only be added after more simple models have been successfully developed.  This increased complexity is not only due to the inherent nature of time-series models, but also to potentially insurmountable problems in splitting the data into *representative* training, test, validation sets that take this time-series nature into account, as explained below.\n",
     "\n",
-    "Ignoring the time-component should not impact performance too much because we are not dealing with proper time-series (observations on the *same* individual at different points in time), and as a result the correlation of the terms is likely not as strong as to overwhelm the influence of the predictors (as may be the case for autoregressive processes). While the fact that we are not able to take into account the default rates of recent loans as additional predictors will lower predictive accuracy somewhat, our model will still give us a good prediction of default *averaged* over all future economic scenarios. Note that recent default rates may not be very predictive of the default rates of new loans anyway, because our loans are scheduled to be paid back over a timeframe of 3 or 6 years.\n",
+    "Ignoring the time-component should not impact performance too much because we are not dealing with proper time-series (observations on the *same* individual at different points in time), and as a result the correlation of the error terms is likely not as strong as to overwhelm the influence of the predictors (as may be the case for autoregressive processes). While the fact that we are not able to take into account the default rates of recent loans as additional predictors will lower predictive accuracy somewhat, our model will still give us a good prediction of default *averaged* over all future economic scenarios. Note that recent default rates may not be very predictive of the default rates of new loans anyway, because our loans are scheduled to be paid back over a timeframe of 3 or 6 years.\n",
     "Moreover, we should be able to capture most of the signal that exists in current default rates by simply adding indicators of macroeconomic performance (e.g., unemployment, GDP growth) as predictors, which would considerably reduce correlation between adjacent error terms. I will leave the use of such external data for later iterations of the project, though.\n",
     "\n",
     "###### Implications for how to split the data \n",
-    "If data are independent, we can simply split them randomly. If they are dependent, there are 2 more options: Another option is to train the models on the earliest portion of the data, and then split the later portion randomly into training and validation set. Finally, we could split the data into random chunks (each containing, say, 6 months of data), and to randomly assign some of these chunks to the training set, and then randomly split the other chunks into test and validation set. (The purpose of still creating test and validation set by random splits is to make sure that test and validation set have the same distribution, which makes model tuning easier.)\n",
+    "If data are independent, we can simply split them randomly. If they are dependent, there are 2 more options: Another option is to train the models on the earliest portion of the data, and then split the later portion randomly into training and validation set. Finally, we could split the data into random chunks (each containing, say, 6 months of data), and then randomly assign some of these chunks to the training set, and finally randomly split the other chunks into test and validation set. (The purpose of still creating test and validation set by random splits is to make sure that test and validation set have the same distribution, which makes model tuning easier.)\n",
     "\n",
     "Since I do not model the time-component of the data – as explained above – I opt for splitting randomly (option 1). It may be tempting to instead train the model on the older data and measure predictive accuracy on the newer data (option 2) in order to get a better estimate of how our model will perform on future data.  The main argument for doing so is that the predictive accuracy computed this way would incorporate the additional uncertainty when making predictions on new loans due to factors such as changing macroeconomic conditions, as well as potential changes over time in the relationships between the predictors and the target. \n",
     "\n",
@@ -388,7 +379,7 @@
     "\n",
     "For all models in this notebook, the performance of a given set of hyperparameters will be evaluated using 5-fold  cross-validation to make the most efficient use of the available data. However, I write the below functions to allow the user to instead take a validation set approach.  In fact, this will be necessary in the next notebook to save computational cost when I train the more computationally intensive models.\n",
     "\n",
-    "The metric I optimize is the **average precision score** on the (cross-)validation set. This measure is similar to the commonly used metric of the area under the ROC curve, but it is better suited to unbalanced classification problems such as ours. The precise meaning of the average precision score is less straightforward, but it is roughly equivalent to the area under the precision-recall curve. Another common metric when using precision and recall is the F1-score (which corresponds to the harmonic mean between precision and recall).  Its disadvantage is that it is based on a particular point on the precision-recall curve (namely the point we get with scikit-learn's default probability threshold of 0.5). By contrast, the average precision is based on the position-recall curve, and thus take into account a classifier's performance for different trade-offs between precision and recall. "
+    "The metric I optimize is the **average precision score** on the (cross-)validation set. This measure is similar to the commonly used metric of the area under the ROC curve, but it is better suited to unbalanced classification problems such as ours. The precise meaning of the average precision score is less straightforward, but it is roughly equivalent to the area under the precision-recall curve. Another common metric when using precision and recall is the F1-score (which corresponds to the harmonic mean between precision and recall).  Its disadvantage is that it is based on a particular point on the precision-recall curve (namely the point we get with scikit-learn's default probability threshold of 0.5). By contrast, the average precision is based on the entire precision-recall curve, and thus take into account a classifier's performance for different trade-offs between precision and recall. "
    ]
   },
   {
@@ -910,7 +901,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remember that these plots are based on our predicted *probabilities* rather than any hard (class) predictions. By default, scikit-learn will use a threshold of 0.5 to generate hard predictions.  In other words, If a borrower's default risk is greater than 50%, we'll predict that they will default.  However, it may make sense to deviate from this threshold if the cost of false positives and false negatives is asymmetrical. \n",
+    "Remember that these plots are based on our predicted *probabilities* rather than any hard (class) predictions. By default, scikit-learn will generate hard predictions by use a threshold of 0.5 for probabilities and 0 for distance to the seperating hyperplane.  In other words, If a borrower's default risk is greater than 50%, we'll predict that they will default.  However, it may make sense to deviate from this threshold if the cost of false positives and false negatives is asymmetrical. \n",
     "\n",
     "In our case, we probably want to err on the side of caution, because the cost of one default is much higher than the income lost from making one fewer loan. How to precisely weigh these two different costs is a much more complicated issue than we can solve here, in part because we do not of knowledge about all the costs associated with each.  This decision would also be easier if we were able to model the net present value of each loan rather than a simple binary prediction of default or no default, because the cost of default depends in large part on how much a borrower pays back before the default.  Unfortunately though, as explained in the first notebook, we did not have the necessary data to compute this more appropriate target variable. \n",
     "\n",
@@ -2033,7 +2024,7 @@
    "source": [
     "The average precision of 0.41 is It was considerably higher we see for all other models, which were all around 0.39.  This is not too surprising, since gradient boosting is generally considered the best classifier short of deep learning.\n",
     "\n",
-    "We can now plot the position-recall curve."
+    "We can now plot the precision-recall curve."
    ]
   },
   {
@@ -2331,9 +2322,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['saved_models/average_precisions.joblib']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Save\n",
     "joblib.dump(average_precisions, 'saved_models/average_precisions.joblib')"
@@ -2351,25 +2353,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'lr': 0.39224740694750637,\n",
-       " 'svm_lin': 0.3913884831950885,\n",
-       " 'rf': 0.3939554379468981,\n",
-       " 'xgb': 0.41414888290960883}"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "average_precisions"
+    "average_precisions = {'lr': 0.39224740694750637,\n",
+    " 'rf': 0.3939554379468981,\n",
+    " 'xgb': 0.41414888290960883}"
    ]
   }
  ],
@@ -2404,7 +2394,7 @@
     "height": "47.2px",
     "left": "591.8px",
     "top": "95.6px",
-    "width": "211.997px"
+    "width": "211.988px"
    },
    "toc_section_display": true,
    "toc_window_display": true
