--- a/capstone_lending_club/1_cleaning.ipynb
+++ b/capstone_lending_club/1_cleaning.ipynb
@@ -517,7 +517,8 @@
    ],
    "source": [
     "# Group-by month and calculate percentage of missing values\n",
-    "missing_by_year = all_data.groupby('issue_d').apply(lambda x: x.isnull().sum().sum()/(x.shape[0]*x.shape[1]))\n",
+    "missing_by_year = all_data.groupby('issue_d') \\\n",
+    "    .apply(lambda x: x.isnull().sum().sum() / (x.shape[0]*x.shape[1]))\n",
     "\n",
     "with plt.style.context('classic'): # Discard Seaborn defaults\n",
     "    fig, ax = plt.subplots()\n",
